--- a/netlify_site/style.css
+++ b/netlify_site/style.css
@@ -39,12 +39,14 @@
 h2, .h2, h3, .h3 {
     margin-top: 100px;
     font-size: 110%;
+    font-family: 'Anton';
 }
 
 h1 {
     padding-top: 65px !important;
     margin-top: 30px !important;
     font-size: 250%;
+    font-family: 'Anton';
 }
 
 pre {
