--- a/netlify_site/style.css
+++ b/netlify_site/style.css
@@ -19,7 +19,7 @@
 
 /* Then we place our content with this style because we don't want it to be full width */
 .mycontent{
-      max-width: 900px !important;
+      max-width: 1200px !important;
       margin-left: auto;
       margin-right: auto;
       font-family: 'Montserrat';
@@ -29,9 +29,6 @@
       padding-left: 15px;
       background-color: #FBF6EF;
 }
-
-
-
 
 /* Just for fun, a bit of customization for title and text.. */
 .mytitle{
@@ -78,4 +75,30 @@ a {
     color: #006992;
     background-color: #FBF6EF;
     border-color: #FBF6EF;
+}
+
+
+/* (TESTING) Scrollable code chunks */
+
+pre {
+  max-height: 300px;
+  overflow-y: auto;
+}
+
+pre[class] {
+  max-height: 300px;
+}
+
+.scroll-100 {
+  max-height: 300px;
+  overflow-y: auto;
+  background-color: inherit;
+}
+
+/* (TESTING) custom TOC */
+
+#TOC {
+  max-height: 300px;
+  overflow-y: auto;
+  background-color: #FBF6EF00
 }
