--- a/style.css
+++ b/style.css
@@ -44,16 +44,23 @@
   font-family: 'Montserrat';
 }
 
-h2, .h2, h3, .h3 {
-    margin-top: 100px;
-    font-size: 110%;
+h3, .h3 {
+    margin-top: 75;
+    font-size: 115%;
     font-family: 'Newslab';
 }
 
-h1 {
+h2, .h2 {
+    padding-top: 35 !important;
+    margin-top: 15 !important;
+    font-size: 205%;
+    font-family: 'Newslab';
+}
+
+h1, .h1 {
     padding-top: 65px !important;
     margin-top: 30px !important;
-    font-size: 250%;
+    font-size: 300%;
     font-family: 'Newslab';
 }
 
